--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,10 @@
-[paths]
-source =
-    /
-    /tests
+[tool:pytest]
+addopts =
+    --cov-report term-missing --cov-branch --cov-report xml --cov-report term
+    --cov=codebase.code -vv --strict-markers -rfE
 
-[run]
+testpaths =
+    tests/test_example.py
+
+[coverage:run]
 relative_files = true
-omit = tests/
