--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,4 +56,6 @@ jobs:
         if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
         with:
           name: python-coverage-comment-action
-          path: python-coverage-comment-action.txt
+          path: ./coverage_comment/python-coverage-comment-action.txt
+
+          
