--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 addopts = """
     --cov-report term-missing --cov-branch --cov-report html --cov-report term
-    --cov=coverage_comment -vv --strict-markers -rfE
+    --cov=weekend_api -vv --strict-markers -rfE
     --ignore=tests/end_to_end/repo
 """
 testpaths = ["tests/"]
