--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,9 @@ target-version = ["py310"]
 name = "coverage-comment"
 version = "0.0.0"
 description = "Publish diff coverage report as PR comment, and create a coverage badge to display on the readme, for Python projects."
-authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
+authors = ["Robert Tross <robert.f.tross@vennium.com>"]
 license = "MIT License"
-packages = [{ include = "weekend_api" }]
-include = ["weekend_api/default.md.j2"]
+packages = [{ include = "weekend_api.py" }]
 
 [tool.poetry.scripts]
 weekend_api = 'weekend_api.call_weather_api:call_weather_api'
