--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Install deps
         run: poetry install
 
+      - name: Run tests
+        run: poetry run pytest
 
       - name: Coverage comment
         id: coverage_comment
