--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,7 @@ jobs:
         run: poetry install
 
       - name: Run tests
-        run: poetry run -m pytest 
+        run: poetry run pytest tests/test_examples.py
 
       - name: Coverage comment
         id: coverage_comment
