--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,6 +48,8 @@ jobs:
         run: poetry install
 
       - name: Run tests
+        env: 
+          API_KEY: ${{ secrets.API_KEY }}
         run: poetry run pytest
 
       - name: Coverage comment
