--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,12 @@ pytest-cov = "^4.0.0"
 pytest-mock = "*"
 tenacity = "^8.1.0"
 exceptiongroup = "*"
+coverage = "*"
+requests = "*"
+jsonpath_ng = "*"
+flask = "*"
+setuptools = "*"
+wheel = "*"
 
 
 [build-system]
