--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
           key: ${{ hashFiles('poetry.lock') }}
 
       - name: Install deps
-        run: poetry install pytest-cov
+        run: poetry install
 
       - name: Run tests
         env: 
@@ -53,7 +53,7 @@ jobs:
           COVERAGE_COMMENT_E2E_ACTION_REF: ${{ github.sha }}
           COVERAGE_COMMENT_E2E_REPO_SUFFIX: ${{ github.event.number }}
           COVERAGE_COMMENT_E2E_PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        run: poetry run pytest
+        run: poetry run pytest --cov=weekend_api
 
       - name: Coverage comment
         id: coverage_comment
