--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,17 +54,19 @@ jobs:
           COVERAGE_COMMENT_E2E_ACTION_REF: ${{ github.sha }}
           COVERAGE_COMMENT_E2E_REPO_SUFFIX: ${{ github.event.number }}
           COVERAGE_COMMENT_E2E_PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        run: poetry run pytest --cov=weekend_api
+        run: poetry run python weekend_api/weekend_api.py
 
       - name: Coverage comment
+        id: coverage_comment
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
           ANNOTATE_MISSING_LINES: true
 
+
       - name: Store Pull Request comment to be posted
         uses: actions/upload-artifact@v3
-        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+        if: steps.coverage_comment.outputs == 'true'
         with:
           name: python-coverage-comment-action
           path: python-coverage-comment-action.txt
