--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,7 @@ jobs:
           COVERAGE_COMMENT_E2E_ACTION_REF: ${{ github.sha }}
           COVERAGE_COMMENT_E2E_REPO_SUFFIX: ${{ github.event.number }}
           COVERAGE_COMMENT_E2E_PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        run: poetry run python test/test_examples.py
+        run: poetry run python tests/test_examples.py
 
       - name: Coverage comment
         id: coverage_comment
