--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -65,9 +65,8 @@ jobs:
 
       - name: Store Pull Request comment to be posted
         uses: actions/upload-artifact@v3
-        if: steps.coverage_comment.outputs == 'true'
         with:
           name: python-coverage-comment-action
-          path: ../report.html
+          path: htmlcov/*.html
 
           
